--- a/tool_src/CMakeLists.txt
+++ b/tool_src/CMakeLists.txt
@@ -8,7 +8,7 @@ set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}")
 # Name your project
 project(CharacterStone)
 
-#device dependent config, here for arduino uno on linux
+#device dependent config, here for arduino mega on linux
 set(AVR_MCU atmega2560)
 set(MCU_FREQ 16000000UL)
 set(AVR_PROGRAMMER wiring)
@@ -20,12 +20,15 @@ set(${Arduino_VARIANT} standard)
 #find_package(Arduino REQUIRED COMPONENTS core_arduino)
 
 #message(WARNING "TEST ${Arduino_INCLUDE_DIRS}")
-include_directories("./bin")
+include_directories("./IR_Decoder")
+include_directories("./Master")
+include_directories("./Slave")
 include_directories("/usr/include/avr")
 
-avr_add_library(Slave ./bin/Slave.c)
+avr_add_library(IR_Decoder./IR_Decoder/IR_Decoder.c)
 
-avr_add_executable(SlaveMain ./bin/Main.c)
+avr_add_executable(SlaveMain ./Slave/Main.c)
+#avr_add_executable(MasterMain ./Master/Main.c)
 
-target_link_libraries(SlaveMain.elf Slave)
+target_link_libraries(SlaveMain.elf IR_Decoder)
 
