added new git ignore, and the rest of the fucking owl

--- a/tool_src/CMakeLists.txt
+++ b/tool_src/CMakeLists.txt
@@ -27,7 +27,7 @@ include_directories("/usr/include/avr")
 
 avr_add_library(IRDecoder ./IR_Decoder/IR_Decoder.c)
 
-avr_add_executable(SlaveMain ./Slave/Main.c)
+avr_add_executable(SlaveMain ./Slave/Slave.c)
 #avr_add_executable(MasterMain ./Master/Main.c)
 
 target_link_libraries(SlaveMain.elf IRDecoder)
